fix: tooltip spacing

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -115,6 +115,10 @@
   margin: $spacing-05 0;
 }
 
+.component-example .bx--tooltip__label .bx--tooltip__trigger {
+  margin-left: $spacing-03;
+}
+
 //---------------------------------------
 // Modal
 //---------------------------------------
